# ATS-Resume-Tailoring-Agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  resume_structure.txt  visualize.ipynb  visualize_graph.py
agent/: graph.py  nodes.py  state.py
samples/: jd.txt  resume.tex
tests/: test_api.py
